# pskit

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: tools.md
scripts/: build_history.py
src/pskit/: __init__.py  __main__.py  audit.py  config.py  kan.py  kan_engine.py  kan_model.pt  manager.py  server.py
src/pskit/tools/: PSKitTools.psm1
tests/: conftest.py  test_cross_platform.py  test_manager.py
