[project]
name = "pskit"
version = "0.1.0"
description = "Neural-safe PowerShell automation for AI agents via MCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mcp", "powershell", "ai", "automation", "safety"]
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1"]

[project.scripts]
pskit = "pskit.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pskit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
