[project]
name = "pskit-mcp"
version = "0.2.0"
description = "Neural-safe PowerShell automation for AI agents via MCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Nickalus Brewer", email = "nickalusbrewer@gmail.com"}]
keywords = ["mcp", "powershell", "ai", "automation", "safety", "neural", "kan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1", "build"]

[project.scripts]
pskit-mcp = "pskit.__main__:main"
pskit = "pskit.__main__:main"

[project.urls]
Homepage = "https://github.com/Nickalus12/pskit"
Repository = "https://github.com/Nickalus12/pskit"
Issues = "https://github.com/Nickalus12/pskit/issues"
Changelog = "https://github.com/Nickalus12/pskit/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pskit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
